--- a/produkt.html
+++ b/produkt.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<!-- Head området til nettsiden -->
 <head>
+    <!-- Definerer metainformasjon og stilark i head-seksjonen -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Inkluderer eksterne CSS-biblioteker -->
+
+    <!-- Lenker til Normalize.css og Font Awesome-stiler -->
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="css/font/css/fontawesome.css" rel="stylesheet">
     <link href="css/font/css/brands.css" rel="stylesheet">
     <link href="css/font/css/solid.css" rel="stylesheet">
-    <!-- Hoved CSS-fil for siden -->
+
+
+    <!-- Lenker til egendefinerte CSS-stiler -->
     <link rel="stylesheet" href="css/style.css" type="text/css">
+
+    <!-- Setter tittelen på nettstedet -->
     <title>Shoepping.no</title>
 </head>
-<body>
+
 
 
     <!-- Hovedinnhold beholder -->
