--- a/produkt.html
+++ b/produkt.html
@@ -22,16 +22,18 @@
     <title>Shoepping.no</title>
 </head>
 
-
-
     <!-- Hovedinnhold beholder -->
     <div id="grid-container">
+
+
         <!-- Header Section -->
         <header>
+
             <!-- Navigasjonsmeny og logo -->
             <nav>
-                <!-- Logo og navigasjon -->
+                <!-- Lenker logoen til hovedsiden slikt at man enklere kan navigere seg tilbake til hovedsside-->
                 <a href="index.html" id="logo">
+
                     <!-- Logobilde og tekst -->
                     <img src="img/duckicon_shoe.png" alt="Shopping Logo">
                     <div class="logo-text">
@@ -39,7 +41,8 @@
                         <p>Shoepping.no</p>
                     </div>
                 </a>
-                <!-- Ikoner -->
+                
+            <!-- Ikoner -->
                 <aside class="right-icons-flag-cart">
                     <i id="cart" class="fas fa-shopping-cart"></i>
                     <i id="flag" class="fas fa-flag"></i>
@@ -66,7 +69,7 @@
 
                     <aside class="right-icons">
                         <i id="filter" class="fas fa-filter"></i> 
-                        <i id="search" class="fas fa-search"></i> <!-- Søkeikon -->
+                        <i id="search" class="fas fa-search"></i>
                                  </aside>
                 </nav>
 
@@ -85,13 +88,17 @@
                     <a href="produktdetalj.html">
                         <h3>Product 1</h3>
                         <img class="product-image" src="https://placehold.co/600x400" alt="Product 1">
+
+                        <!-- Rating og pris -->
                         <span class="product-rating">
+                            <!-- Stjernerating hentet fra https://fontawesome.com/icons/star?style=solid -->
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star-half-alt"></i> (1273)
                         </span>
+                        <!-- Pris for produktet-->
                         <p class="product-price">1 103 NOK</p>
                     </a>
                 </article>
@@ -100,12 +107,15 @@
               <article class="product-item">
                 <h3>Product 2</h3>
                 <img class="product-image" src="https://placehold.co/600x400" alt="Product 2">
+                <!--  Rating og pris -->
                 <span class="product-rating">
+                    <!-- Stjernerating hentet fra https://fontawesome.com/icons/star?style=solid -->
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i> (923)
                 </span>
+                <!-- Pris for produktet-->
                 <p class="product-price">1 003 NOK</p>
             </article>
 
@@ -114,13 +124,16 @@
                 <article class="product-item">
                     <h3>Product 3</h3>
                     <img class="product-image" src="https://placehold.co/600x400" alt="Product 3">
+                    <!--  Rating og pris -->
                     <span class="product-rating">
+                     <!-- Stjernerating  -->
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i> (1003)
                     </span>
+                    <!-- Pris for produktet-->
                     <p class="product-price">900 NOK</p>
                 </article>
 
