--- a/produkt.html
+++ b/produkt.html
@@ -86,7 +86,7 @@
                 <!-- Product 1 -->
                 <article class="product-item">
                     <a href="produktdetalj.html">
-                        <h3>Product 1</h3>
+                        <h3>Trykk her</h3>
                         <img class="product-image" src="https://placehold.co/600x400" alt="Product 1">
 
                         <!-- Rating og pris -->
